# Daily_Podcast

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
config/: subjects.example.yaml  subjects.yaml
src/daily_podcast/: __init__.py  ai.py  cli.py  config.py  gmailer.py  llm.py  runner.py  scheduler.py  tts.py
src/daily_podcast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
